--- a/src/style/base/reset.scss
+++ b/src/style/base/reset.scss
@@ -3,11 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-size: $text-sm;
-  color: $text-black;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  font-weight: $font-regular;
   &::-webkit-scrollbar {
     width: 8px;
     height: 8px;
@@ -23,6 +19,13 @@
 
 html {
   font-size: 62.5%;
+}
+
+body {
+  font-size: $text-sm;
+  color: $text-black;
+  font-family: "Poppins", sans-serif;
+  font-weight: $font-regular;
 }
 
 button {
